add README.pod to repository

--- a/dist.ini
+++ b/dist.ini
@@ -4,19 +4,23 @@ license = Perl_5
 copyright_holder = Panu Ervamaa
 copyright_year   = 2011
 
+[@Git]
 [@Basic]
+
+[Git::NextVersion]
+[PkgVersion]
 
 [MetaResources]
 repository.type   = git
 repository.url    = git://github.com/pnu/Plack-Middleware-Image-Scale.git
 repository.web    = http://github.com/pnu/Plack-Middleware-Image-Scale
 
-[@Git]
-[Git::NextVersion]
-[PkgVersion]
-
 [MetaJSON]
 [PodWeaver]
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = pod
+filename = README.pod
+location = root
 
 [PodSyntaxTests]
 [PodCoverageTests]
