Add Changes and new .pod documentation. Prune *~ backup files.

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,9 @@ copyright_year   = 2011
 [@Git]
 [@Basic]
 
+[PruneFiles]
+match = ~$
+
 [Git::NextVersion]
 [PkgVersion]
 
@@ -22,11 +25,12 @@ type = pod
 filename = README.pod
 location = root
 
+[CheckChangesTests]
 [PodSyntaxTests]
 [PodCoverageTests]
 [CriticTests]
 [NoTabsTests]
+[KwaliteeTests]
 
 [AutoPrereqs]
-
 
