Add tests to verify how scale and crop get called.

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ repository.url    = git://github.com/pnu/Plack-Middleware-Image-Scale.git
 repository.web    = http://github.com/pnu/Plack-Middleware-Image-Scale
 
 [PkgVersion]
+[Authority]
 
 [MetaJSON]
 [PodWeaver]
