Also match .jpeg files.

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Plack-Middleware-Image-Scale
 author  = Panu Ervamaa <pnu@cpan.org>
 license = Perl_5
 copyright_holder = Panu Ervamaa
-copyright_year   = 2011
+copyright_year   = 2011-2012
 
 [Git::NextVersion]
 [NextRelease]
