--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Plack-Middleware-Image-Scale
 author  = Panu Ervamaa <pnu@cpan.org>
 license = Perl_5
 copyright_holder = Panu Ervamaa
-copyright_year   = 2011-2012
+copyright_year   = 2011-2016
 
 [Git::NextVersion]
 [NextRelease]
@@ -13,26 +13,40 @@ copyright_year   = 2011-2012
 [PruneFiles]
 match = ~$
 
+[ReadmeAnyFromPod]
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = markdown
+filename = README.md
+location = root
+
 [MetaResources]
 repository.type   = git
 repository.url    = git://github.com/pnu/Plack-Middleware-Image-Scale.git
 repository.web    = http://github.com/pnu/Plack-Middleware-Image-Scale
 
+[Encoding]
+encoding = bytes
+filename = t/images/100x100.png
+filename = t/images/50x50.gif
+filename = t/images/75x75.jpg
+
+[OurPkgVersion]
 [PkgVersion]
 [Authority]
-
 [MetaJSON]
 [PodWeaver]
-[ReadmeAnyFromPod]
-[ReadmeAnyFromPod / ReadmeInRoot]
-location = root
-
-[Test::CheckChanges]
-[PodSyntaxTests]
-[PodCoverageTests]
-[Test::Perl::Critic]
-[NoTabsTests]
-[KwaliteeTests]
-
 [AutoPrereqs]
+[MinimumPerl]
 
+[Test::Compile]
+[Test::Perl::Critic]
+[Test::Portability]
+[Test::EOL]
+[Test::NoTabs]
+[Test::Synopsis]
+[TestRelease]
+[MetaTests]
+[Test::CPAN::Meta::JSON]
+[Test::CPAN::Changes]
+[CheckChangesHasContent]
+[Test::CheckChanges]
